# CMakePractice

./: README.md
StudyCmakeExamplesChinese/: README.md
StudyCmakeExamplesChinese/01-hello-cmake/: CMakeLists.txt
StudyCmakeExamplesChinese/02-hello-headers/: README.md  build.sh
StudyCmakeExamplesChinese/02-hello-headers/src/: Hello.cpp
StudyCmakeExamplesChinese/03-static-library/: CMakeLists.txt  README.md
StudyCmakeExamplesChinese/03-static-library/src/: Hello.cpp  main.cpp
StudyCmakeExamplesChinese/04-shared-library/: CMakeLists.txt  README.md
StudyCmakeExamplesChinese/04-shared-library/src/: Hello.cpp  main.cpp
StudyCmakeExamplesChinese/05-build-type/: CMakeLists.txt  README.md  build.sh  main.cpp
StudyCmakeExamplesChinese/06-compile-flags/: CMakeLists.txt  README.md  main.cpp
StudyCmakeExamplesChinese/08-clang/: README.md  build.sh
StudyCmakeExamplesChinese/hello-cmake/: README.md  main.cpp
StudyCmakeExamplesChinese/hello-headers/: CMakeLists.txt  README.md
StudyCmakeExamplesChinese/hello-headers/src/: main.cpp
StudyCmakeExamplesChinese/multi-cmake/: CMakeLists.txt  README.md
StudyCmakeExamplesChinese/multi-cmake/subbinary/: CMakeLists.txt  main.cpp
StudyCmakeExamplesChinese/multi-cmake/sublibrary1/: CMakeLists.txt
StudyCmakeExamplesChinese/multi-cmake/sublibrary1/include/sublib1/: sublib1.h
StudyCmakeExamplesChinese/multi-cmake/sublibrary1/src/: sublib1.cpp
StudyCmakeExamplesChinese/multi-cmake/sublibrary2/: CMakeLists.txt
StudyCmakeExamplesChinese/multi-cmake/sublibrary2/include/sublib2/: sublib2.h
cg/: CMakeLists.txt  README.md  build.sh
cg/cgutils/: CMakeLists.txt  cgutils.cpp  cgutils.h  filesystem.h
cg/configuration/: root_directory.h.in
cg/learnopengl/: CMakeLists.txt
cg/learnopengl/1.getting_started/: CMakeLists.txt
cg/learnopengl/1.getting_started/2.1.hello_triangle/: main.cpp
cg/learnopengl/2.1.hello_triangle/: CMakeLists.txt  main.cpp
cg/learnopengl/7.in_practice/: CMakeLists.txt
cg/learnopengl/7.in_practice/3.Breakout/: CMakeLists.txt  ball_object.cpp  ball_object.h  game.cpp  game.h  game_level.cpp  game_level.h  game_object.cpp  game_object.h  main.cpp  particle.fs  particle.vs  particle_generator.cpp  particle_generator.h  post_processing.fs  post_processing.vs  post_processor.cpp  post_processor.h  power_up.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  sprite.fs  sprite.vs  sprite_renderer.cpp  sprite_renderer.h  text_2d.fs  text_2d.vs  text_renderer.cpp  text_renderer.h  texture.cpp  texture.h
cg/learnopengl/7.in_practice/3.Breakout/levels/: one.lvl  two.lvl
cg/subbinary/: CMakeLists.txt  main.cpp
