cmake_minimum_required(VERSION 3.5) # 设置 CMake 最小版本

project(hello_library) # 设置工程名

############################################################
# Create a library
############################################################

# 根据 Hello.cpp 生成动态库
add_library(hello_library SHARED
  src/Hello.cpp
)

# 给动态库 hello_library 起一个别的名字 hello::library
add_library(hello::library ALIAS hello_library)

# 为这个库目标，添加头文件路径，PUBLIC表示包含了这个库的目标也会包含这个路径
target_include_directories(hello_library
  PUBLIC
  ${PROJECT_SOURCE_DIR}/include
)

############################################################
# Create an executable
############################################################
# 根据 main.cpp 生成可执行文件
add_executable(hello_binary
  src/main.cpp
)

# 链接库和可执行文件，使用的是这个库的别名
target_link_libraries(hello_binary
  PRIVATE
  hello::library
)
